--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,27 @@
 version: 2
 jobs:
-  deploy:
+  test:
     docker:
-      - image: google/cloud-sdk
+      - image: circleci/node:10
+    working_directory: ~/repo
     steps:
-      - run: |
-          echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-          gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-          gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-          gcloud auth list
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
+      - run:
+          name: Install dependencies
+          command: npm install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: Run tests
+          command: npm test
+workflows:
+  version: 2
+  ultimate_pipeline:
+    jobs:
+      - test
